--- a/NewShoreTest/ClientApp/angular.json
+++ b/NewShoreTest/ClientApp/angular.json
@@ -20,14 +20,18 @@
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
             "tsConfig": "src/tsconfig.app.json",
-            "assets": ["src/assets"],
+            "assets": [
+              "src/assets"
+            ],
             "styles": [
-              "node_modules/bootstrap/dist/css/bootstrap.min.css",
-              "src/styles.css",
-              "node_modules/materialize-css/dist/css/materialize.min.css"
+              
+              "./node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "./node_modules/materialize-css/dist/css/materialize.css",
+              "src/styles.css"
             ],
             "scripts": [
-              "node_modules/materialize-css/dist/js/materialize.min.js"
+              "node_modules/materialize-css/dist/js/materialize.js",
+              "src/assets/js/MyScript.js"
             ]
           },
           "configurations": {
