--- a/NewShoreTest/appsettings.json
+++ b/NewShoreTest/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "SQLServerConnection": "Data Source=DESKTOP-PNDC617\\SQLEXPRESS;Initial Catalog=NewShoreTest;User ID=newshoretest;Password=newshoretest;Connection Timeout=60;"
+  },
   "Logging": {
       "LogLevel": {
       "Default": "Information",
@@ -6,5 +9,5 @@
       "Microsoft.Hosting.Lifetime": "Information"
       }
     },
-"AllowedHosts": "*"
+  "AllowedHosts": "*"
 }
