--- a/NewShoreTest/appsettings.json
+++ b/NewShoreTest/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "SQLServerConnection": "Data Source=DESKTOP-NO15G1B\\SQLEXPRESS;Initial Catalog=NewShoreTest;User ID=newshoretest;Password=newshoretest;Connection Timeout=60;"
+    "SQLServerConnection": "Data Source=DESKTOP-NO15G1B\\SQLEXPRESS;Initial Catalog=NewShoreTest;User ID=Camilo;Password=camilo1;Connection Timeout=60; Trusted_Connection=True;"
   },
   "Logging": {
       "LogLevel": {
