--- a/NewShoreTest/ClientApp/package.json
+++ b/NewShoreTest/ClientApp/package.json
@@ -30,9 +30,11 @@
     "hammerjs": "^2.0.8",
     "jquery": "3.4.1",
     "materialize-css": "^1.0.0-rc.2",
+    "ng-multiselect-dropdown": "^0.2.10",
     "oidc-client": "^1.9.1",
     "popper.js": "^1.16.0",
     "rxjs": "^6.5.3",
+    "tslib": "^2.0.3",
     "zone.js": "0.9.1"
   },
   "devDependencies": {
