--- a/NewShoreTest/appsettings.json
+++ b/NewShoreTest/appsettings.json
@@ -3,11 +3,13 @@
     "SQLServerConnection": "Data Source=DESKTOP-NO15G1B\\SQLEXPRESS;Initial Catalog=NewShoreTest;User ID=Camilo;Password=camilo1;Connection Timeout=60; Trusted_Connection=True;"
   },
   "Logging": {
-      "LogLevel": {
+    "LogLevel": {
       "Default": "Information",
       "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
-      }
-  },
-  "AllowedHosts": "*"
+      "Microsoft.Hosting.Lifetime": "Information",
+      "NewShoreTest.DataBaseAccessObject.Handler.Implementation": "Information",
+      "NewShoreTest.ExternalAPIs.VivaAirAPI.Handler.Implementation":  "Information"
+    },
+    "AllowedHosts": "*"
+  }
 }
