Logging with NLog

--- a/NewShoreTest/appsettings.json
+++ b/NewShoreTest/appsettings.json
@@ -4,9 +4,9 @@
   },
   "Logging": {
     "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information",
+      "Default": "Warning",
+      "Microsoft": "Critical",
+      "Microsoft.Hosting.Lifetime": "Warning",
       "NewShoreTest.DataBaseAccessObject.Handler.Implementation": "Information",
       "NewShoreTest.ExternalAPIs.VivaAirAPI.Handler.Implementation":  "Information"
     },
